# Crystalfontz3D

./: README.md  version.current
10049G2FIQ/: codesourcery_toolchain.cmake  manifest.json
10049G2FIQ/application/: config.cpp  config_app.cpp  controller.cpp  cycle_homing.cpp  plan_arc.cpp
10049G2FIQ/include/: cfa10049_fiq.h  cfa10049_fiq.h~  config.h  controller.h  gcode_parser.h  hardware.h  help.h  kinematics.h  plan_line.h  planner.h  quicklz.h  settings.h  stepper.h  text_parser.h  util.h
10049G2FIQ/platform/: quicklz.cpp  report.cpp  stepper.cpp
10049G2FIQ/settings/: settings_3DPrint.h  settings_othermill.h
10049G2LEG/: CMakeLists.txt  codesourcery_toolchain.cmake~  index
10049G2LEG/application/: canonical_machine.cpp  controller.cpp~  gcode_parser.cpp  kinematics.cpp  plan_line.cpp  planner.cpp
10049G2LEG/include/: canonical_machine.h  cfa10049_fiq.h  config_app.h  hardware.h  plan_arc.h  report.h  settings.h~  stepper.h~  switch.h  text_parser.h~  tinyg2.h  xio.h
10049G2LEG/platform/: hardware.cpp  help.cpp  main.cpp  stepper.cpp  switch.cpp  text_parser.cpp  util.cpp
10049G2LEG/settings/: settings_default.h  settings_othercutter.h
CADFiles/: CFA921_25.g  CFA921_Case_0v2.scad  Ultimaker_test_001.txt  eagle.gcode  gcode_test001.in
